# itoap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  test.yml
benches/: bench.rs
itoap-bench/: Cargo.toml
itoap-bench/benches/: bench.rs
src/: common.rs  fallback.rs  lib.rs  sse2.rs
